# hub-QdXP

王晨越/Week16/: .env.example  CLAUDE.md  README.md  main_demo.py  pyproject.toml  requirements-dev.txt  requirements-install.txt
王晨越/Week16/agent/: __init__.py  base.py  player_agent.py  summary_agent.py
王晨越/Week16/api/: __init__.py  server.py
王晨越/Week16/configs/: game_configs.py
王晨越/Week16/engine/: __init__.py  game_engine.py
王晨越/Week16/frontend/: index.html
王晨越/Week16/game_logging/: __init__.py  game_logger.py
王晨越/Week16/logs/: game_092ec84d1b5c.json  game_20260528_234446.json
王晨越/Week16/memory/: __init__.py  experience.py
王晨越/Week16/memory/data/: experiences.json
王晨越/Week16/roles/: __init__.py  base.py  hunter.py  seer.py  villager.py  werewolf.py  witch.py
王晨越/Week16/schema/: __init__.py  dialogue.py  game.py
王晨越/Week16/tests/: test_api.py  test_engine.py  test_memory.py  test_player_agent.py  test_roles.py  test_schema.py
